add incubator module, add javadoc and rename class